* CHANGES IN dplR VERSION 1.7.0

File: xdate.floater.R and .Rd
----------------

- New function to cross date a floating series (i.e., one with no dates).

File: series.rwl.plot
----------------

- Cosmetic changes to plot

File: intro-dplR
----------------

- typos

* CHANGES IN dplR VERSION 1.6.9

File: sss.R and .Rd
----------------

- Adding subsample signal strength as a stand alone function

File: spag.plot.R and .Rd
----------------

- Small bug fix

File: crn.plot.R and .Rd
----------------

- Small bug fix

File: as.rwl.R and .Rd
----------------

- Adding a convenience function to transform data.frame or matrix to class rwl

File: powt.R and .Rd
----------------

- Small change so that powt returns class rwl as well as data.frame

File: pass.filt.R and .Rd
----------------

- Adding a wrapper function for signal::butter and signal::filtfilt to get low-pass, high-pass, band-pass filtering implemented as per a user request.


File: rwl.stats.R and .Rd
----------------

- Removing sens1 and sens2 from this function. At world dendro I'm still seeing these being used by dplR users. It's a terrible stat. I'm taking it out.  Help file amended.

File: detrend.series.R and .Rd
----------------

- The function will now return the curves used for detrending the series if return.info is TRUE.  Help file amended.

- Added the Hugershoff curve as an method for detrending. It's done along the lines of ModNegExp with straight line if the nls call fails. 

- Added option to compute differences via subtraction rather than division. 

File: detrend.R
----------------

- See above. 

File: wavelet.plot.R
----------------

- Typos. 

* CHANGES IN dplR VERSION 1.6.8

- Note that Darwin Alexander Pucha Cofrep has been added as a developer to work on plotRings() etc.

File: DESCRIPTION
----------------

- Fixing the version requirement for "animation" (>= 2.0-2)
- Fixing the version requirement for "R.utils" (>= 1.32.1)